--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Raleway', sans-serif;
     color: rgb(34, 34, 34);
     margin: 0;
-    width: 100%;
+    height: 100%;
 }
 
 .container {
