--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@ body {
     background: #dfdfdf;
     font-family: 'Raleway', sans-serif;
     color: rgb(34, 34, 34);
-    margin: 0;
+    margin: 5px;
     height: 100%;
 }
 
 .container {
     width: 100%;
-    margin: 5px auto;
+    margin: 0px auto;
 }
 
 .profile {
